hotfix(YB-209): CORS 설정 수정